// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link props should match snapshot 1`] = `
<Link
  className="class"
  id="id"
  isExternal={true}
  onClick={[MockFunction]}
  title="title"
  url="http://google.com.au"
>
  <styled.a
    className="class"
    href="http://google.com.au"
    id="id"
    onClick={[MockFunction]}
    target="_blank"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "size": Object {
            "default": "1.8rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
  >
    <a
      className="class sc-ifAKCX beoLJX"
      href="http://google.com.au"
      id="id"
      onClick={[MockFunction]}
      target="_blank"
    >
      title
      <styled.span>
        <span
          className="sc-EHOje jGgJXl"
        >
          <styled.span>
            <span
              className="sc-bdVaJa hjmIub"
            >
              Link opens in new window
            </span>
          </styled.span>
        </span>
      </styled.span>
    </a>
  </styled.a>
</Link>
`;

exports[`Link snapshot basic 1`] = `
<Link
  id="id"
  title="title"
  url="http://google.com"
>
  <styled.a
    href="http://google.com"
    id="id"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "size": Object {
            "default": "1.8rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
  >
    <a
      className="sc-ifAKCX beoLJX"
      href="http://google.com"
      id="id"
    >
      title
    </a>
  </styled.a>
</Link>
`;

exports[`Link snapshot external 1`] = `
<Link
  id="id"
  isExternal={true}
  title="title"
  url="http://google.com"
>
  <styled.a
    href="http://google.com"
    id="id"
    target="_blank"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "size": Object {
            "default": "1.8rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
  >
    <a
      className="sc-ifAKCX beoLJX"
      href="http://google.com"
      id="id"
      target="_blank"
    >
      title
      <styled.span>
        <span
          className="sc-EHOje jGgJXl"
        >
          <styled.span>
            <span
              className="sc-bdVaJa hjmIub"
            >
              Link opens in new window
            </span>
          </styled.span>
        </span>
      </styled.span>
    </a>
  </styled.a>
</Link>
`;

exports[`Link snapshot internal 1`] = `
<Link
  id="id"
  title="title"
  url="inner"
>
  <styled.a
    href="inner"
    id="id"
    theme={
      Object {
        "border": Object {
          "radius": Object {
            "edge": "2px",
            "round": "100px",
          },
          "size": "2px",
        },
        "breakpoint": Object {
          "lg": "992px",
          "md": "768px",
          "sm": "576px",
          "xl": "1200px",
          "xs": "0px",
        },
        "color": Object {
          "background": "#ffffff",
          "border": "#2fa4e7",
          "checked": "#2fa4e7",
          "danger": "#c71c22",
          "default": "#2fa4e7",
          "disabled": "#acacac",
          "error": "#c71c22",
          "focus": "#54b4eb",
          "font": "#333333",
          "hover": "#178acc",
          "info": "#04519b",
          "primary": "#2fa4e7",
          "secondary": "#e9ecef",
          "success": "#73a839",
          "tertiary": "#343a40",
          "warning": "#dd5600",
        },
        "font": Object {
          "size": Object {
            "default": "1.8rem",
          },
          "weight": Object {
            "default": 100,
          },
        },
      }
    }
  >
    <a
      className="sc-ifAKCX beoLJX"
      href="inner"
      id="id"
    >
      title
    </a>
  </styled.a>
</Link>
`;
